changes in settings.py and .env.development

--- a/.env.development
+++ b/.env.development
@@ -6,7 +6,7 @@ ALLOWED_HOSTS=127.0.0.1,localhost
 # 🗄️ Base de datos local
 DB_NAME=medops_db
 DB_USER=medops_user
-DB_PASSWORD=123456ue
+DB_PASSWORD=ClaveSegura123!
 DB_HOST=localhost
 DB_PORT=5432
 
