--- a/Pipfile
+++ b/Pipfile
@@ -7,9 +7,11 @@ name = "pypi"
 django = "*"
 psycopg2-binary = "*"
 python-dotenv = "*"
+djangorestframework = "*"
+openpyxl = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.13"
-python_full_version = "3.13.7"
+python_version = "3.12"
+python_full_version = "3.12.3"
