feat(api): agregar event_log_api y fixes

--- a/frontend/medops/tsconfig.json
+++ b/frontend/medops/tsconfig.json
@@ -10,7 +10,13 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "jsx": "react-jsx",
-    "baseUrl": "./src"
+    "baseUrl": "./src",
+    "paths": {
+      "api/*": ["api/*"],
+      "components/*": ["components/*"],
+      "pages/*": ["pages/*"],
+      "types/*": ["types/*"]
+    }
   },
   "include": ["src"]
 }
