Extend Patient model, add export utils, update vite/tsconfig aliases

--- a/frontend/medops/tsconfig.json
+++ b/frontend/medops/tsconfig.json
@@ -15,7 +15,10 @@
       "api/*": ["api/*"],
       "components/*": ["components/*"],
       "pages/*": ["pages/*"],
-      "types/*": ["types/*"]
+      "types/*": ["types/*"],
+      "utils/*": ["utils/*"],       // 👈 agregado
+      "hooks/*": ["hooks/*"],       // 👈 agregado
+      "contexts/*": ["contexts/*"]  // 👈 agregado
     }
   },
   "include": ["src"]
