--- a/frontend/medops/package.json
+++ b/frontend/medops/package.json
@@ -14,20 +14,24 @@
     "@tanstack/react-query-devtools": "^5.90.2",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
     "react": "^19.1.1",
     "react-datepicker": "^8.8.0",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.4",
     "react-select": "^5.10.2",
-    "recharts": "^3.3.0"
+    "recharts": "^3.3.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@types/jspdf": "^1.3.3",
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
     "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^19.1.9",
     "@types/react-select": "^5.0.0",
+    "@types/xlsx": "^0.0.35",
     "@vitejs/plugin-react-swc": "^4.1.0",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
