--- a/frontend/medops/package.json
+++ b/frontend/medops/package.json
@@ -18,6 +18,7 @@
     "react": "^19.1.1",
     "react-datepicker": "^8.8.0",
     "react-dom": "^19.1.1",
+    "react-hook-form": "^7.65.0",
     "react-router-dom": "^7.9.4",
     "react-select": "^5.10.2",
     "recharts": "^3.3.0",
