--- a/frontend/medops/package.json
+++ b/frontend/medops/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "generate:types": "openapi-typescript http://127.0.0.1/api/schema/ -o src/types/api.d.ts"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.90.5",
@@ -40,6 +41,7 @@
     "globals": "^16.4.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
-    "vite": "^7.1.7"
+    "vite": "^7.1.7",
+    "openapi-typescript": "^7.10.1"
   }
 }
