--- a/frontend/medops/package.json
+++ b/frontend/medops/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.90.5",
     "@tanstack/react-query-devtools": "^5.90.2",
+    "axios": "^1.13.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@types/axios": "^0.9.36",
     "@types/jspdf": "^1.3.3",
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
@@ -39,9 +41,9 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
+    "openapi-typescript": "^7.10.1",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
-    "vite": "^7.1.7",
-    "openapi-typescript": "^7.10.1"
+    "vite": "^7.1.7"
   }
 }
