--- a/frontend/medops/package.json
+++ b/frontend/medops/package.json
@@ -21,6 +21,7 @@
     "react-datepicker": "^8.8.0",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.65.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.4",
     "react-select": "^5.10.2",
     "recharts": "^3.3.0",
@@ -34,6 +35,7 @@
     "@types/react": "^19.1.16",
     "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^19.1.9",
+    "@types/react-icons": "^2.2.7",
     "@types/react-select": "^5.0.0",
     "@types/xlsx": "^0.0.35",
     "@vitejs/plugin-react-swc": "^4.1.0",
