--- a/frontend/medops/package.json
+++ b/frontend/medops/package.json
@@ -11,13 +11,16 @@
     "generate:types": "openapi-typescript http://127.0.0.1/api/schema/ -o src/types/api.d.ts"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@tanstack/react-query": "^5.90.5",
     "@tanstack/react-query-devtools": "^5.90.2",
     "axios": "^1.13.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
+    "moment": "^2.30.1",
     "react": "^19.1.1",
+    "react-big-calendar": "^1.19.4",
     "react-datepicker": "^8.8.0",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.65.0",
@@ -31,8 +34,10 @@
     "@eslint/js": "^9.36.0",
     "@types/axios": "^0.9.36",
     "@types/jspdf": "^1.3.3",
+    "@types/moment": "^2.11.29",
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
+    "@types/react-big-calendar": "^1.16.3",
     "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^19.1.9",
     "@types/react-icons": "^2.2.7",
