--- a/frontend/medops/package.json
+++ b/frontend/medops/package.json
@@ -11,7 +11,10 @@
     "generate:types": "openapi-typescript http://127.0.0.1/api/schema/ -o src/types/api.d.ts"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@heroicons/react": "^2.2.0",
+    "@mui/material": "^7.3.5",
     "@tanstack/react-query": "^5.90.7",
     "@tanstack/react-query-devtools": "^5.90.2",
     "axios": "^1.13.0",
@@ -38,7 +41,7 @@
     "@types/jspdf": "^1.3.3",
     "@types/moment": "^2.11.29",
     "@types/node": "^24.6.0",
-    "@types/react": "^19.1.16",
+    "@types/react": "^19.2.4",
     "@types/react-big-calendar": "^1.16.3",
     "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^19.1.9",
