--- a/frontend/medops/package.json
+++ b/frontend/medops/package.json
@@ -13,21 +13,23 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.2.0",
     "@mui/material": "^7.3.5",
-    "@tanstack/react-query": "^5.90.9",
+    "@tanstack/react-query": "^5.90.10",
     "@tanstack/react-query-devtools": "^5.90.2",
     "axios": "^1.13.0",
     "chart.js": "^4.5.1",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
+    "lucide-react": "^0.554.0",
     "moment": "^2.30.1",
-    "react": "^19.1.1",
+    "react": "^19.2.0",
     "react-big-calendar": "^1.19.4",
     "react-chartjs-2": "^5.3.1",
     "react-datepicker": "^8.8.0",
-    "react-dom": "^19.1.1",
+    "react-dom": "^19.2.0",
     "react-hook-form": "^7.65.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.4",
@@ -37,25 +39,29 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@tailwindcss/vite": "^4.1.17",
     "@types/axios": "^0.9.36",
     "@types/jspdf": "^1.3.3",
     "@types/moment": "^2.11.29",
-    "@types/node": "^24.6.0",
-    "@types/react": "^19.2.4",
+    "@types/node": "^24.10.1",
+    "@types/react": "^19.2.6",
     "@types/react-big-calendar": "^1.16.3",
     "@types/react-datepicker": "^6.2.0",
-    "@types/react-dom": "^19.1.9",
+    "@types/react-dom": "^19.2.3",
     "@types/react-icons": "^2.2.7",
     "@types/react-select": "^5.0.0",
     "@types/xlsx": "^0.0.35",
-    "@vitejs/plugin-react-swc": "^4.1.0",
+    "@vitejs/plugin-react-swc": "^4.2.2",
+    "autoprefixer": "^10.4.22",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
     "openapi-typescript": "^7.10.1",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.17",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
-    "vite": "^7.1.7"
+    "vite": "^7.2.4"
   }
 }
