--- a/frontend/medops/package.json
+++ b/frontend/medops/package.json
@@ -31,6 +31,7 @@
     "react-datepicker": "^8.8.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.65.0",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.4",
     "react-select": "^5.10.2",
