--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 
 services:
   frontend:
-    build: ./frontend
+    build: ./frontend/medops
     ports:
       - "8080:80"
     environment:
