--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,9 @@ services:
       - backend
     networks:
       - medops_net
+    volumes:
+      - ./frontend/medops/dist:/usr/share/nginx/html
+      - ./staticfiles:/app/staticfiles   # 👈 añadido para servir estáticos Django/DRF
 
   backend:
     build: .
@@ -40,6 +43,8 @@ services:
       retries: 5
     networks:
       - medops_net
+    volumes:
+      - ./staticfiles:/app/staticfiles   # 👈 backend también comparte staticfiles
 
   db:
     image: postgres:15
@@ -57,6 +62,7 @@ services:
 
 volumes:
   db_data:
+  staticfiles:   # 👈 volumen declarado para persistencia de estáticos
 
 networks:
   medops_net:
