--- a/frontend/medops/nginx.conf
+++ b/frontend/medops/nginx.conf
@@ -5,17 +5,14 @@ server {
   root /usr/share/nginx/html;
   index index.html;
 
-  # 👇 Frontend (React/Vite build)
   location / {
     try_files $uri /index.html;
   }
 
-  # 👇 Archivos estáticos de Django/DRF
   location /static/ {
-    root /app;
+    alias /app/staticfiles/;
   }
 
-  # 👇 Proxy hacia el backend Django/Gunicorn
   location /api/ {
     proxy_pass http://backend:8000/api/;
     proxy_set_header Host $host;
