--- a/frontend/medops/nginx.conf
+++ b/frontend/medops/nginx.conf
@@ -5,16 +5,28 @@ server {
   root /usr/share/nginx/html;
   index index.html;
 
+  # 👇 Frontend (React/Vite build)
   location / {
     try_files $uri /index.html;
   }
 
+  # 👇 Archivos estáticos de Django/DRF
   location /static/ {
     alias /app/staticfiles/;
   }
 
+  # 👇 Proxy hacia el backend Django/Gunicorn (API)
   location /api/ {
     proxy_pass http://backend:8000/api/;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+  }
+
+  # 👇 Proxy hacia el backend Django/Gunicorn (Admin)
+  location /admin/ {
+    proxy_pass http://backend:8000/admin/;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
