--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     build: ./frontend/medops
     ports:
       - "8080:80"
+    env_file:
+      - .env.production        # 👈 ahora también puede leer variables desde .env.production
     environment:
       - VITE_API_URL=http://localhost:8000/api/
       - VITE_DEV_TOKEN=${VITE_DEV_TOKEN}
@@ -23,6 +25,8 @@ services:
              gunicorn --bind 0.0.0.0:8000 medops.wsgi:application"
     ports:
       - "8000:8000"
+    env_file:
+      - .env.production        # 👈 aquí indicamos que lea el archivo .env.production
     environment:
       - DJANGO_SECRET_KEY=${DJANGO_SECRET_KEY}
       - DEBUG=${DEBUG}
