--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,9 +38,7 @@ services:
       - DB_PORT=5432
       - DJANGO_LOG_FILE=${DJANGO_LOG_FILE}
       - CORS_ALLOWED_ORIGINS=http://localhost:8080,http://127.0.0.1:8080
-      # 👇 variables para apuntar a los contenedores ICD-API internos (ahora desde .env.production)
-      - ICD_API_BASE_ES=${ICD_API_BASE_ES}
-      - ICD_API_BASE_EN=${ICD_API_BASE_EN}
+      # 👇 variables ICD-API ya no se hardcodean, se leen directo de .env.production
     depends_on:
       - db
       - icdapi_es
