--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,9 +48,10 @@ services:
         condition: service_healthy
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/api/"]
-      interval: 10s
-      timeout: 3s
+      interval: 15s
+      timeout: 5s
       retries: 5
+      start_period: 40s   # 👈 espera antes de empezar a chequear, da tiempo a migraciones + gunicorn
     networks:
       - medops_net
     volumes:
