--- a/frontend/medops/nginx.conf
+++ b/frontend/medops/nginx.conf
@@ -5,9 +5,9 @@ server {
   root /usr/share/nginx/html;
   index index.html;
 
-  # 👇 Frontend (React/Vite build)
+  # 👇 Frontend SPA (React/Vite build) con fallback
   location / {
-    try_files $uri /index.html;
+    try_files $uri $uri/ /index.html;
   }
 
   # 👇 Archivos estáticos de Django/DRF
@@ -17,7 +17,7 @@ server {
 
   # 👇 Proxy hacia el backend Django/Gunicorn (API)
   location /api/ {
-    proxy_pass http://backend:8000/api/;
+    proxy_pass http://backend:8000;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -26,10 +26,21 @@ server {
 
   # 👇 Proxy hacia el backend Django/Gunicorn (Admin)
   location /admin/ {
-    proxy_pass http://backend:8000/admin/;
+    proxy_pass http://backend:8000;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $scheme;
+  }
+
+  # 👇 Opciones de rendimiento (gzip y cache)
+  gzip on;
+  gzip_types text/plain text/css application/javascript application/json image/svg+xml;
+  gzip_min_length 256;
+
+  location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|eot|ttf|svg)$ {
+    expires 30d;
+    access_log off;
+    add_header Cache-Control "public";
   }
 }
