--- a/frontend/medops/nginx.conf
+++ b/frontend/medops/nginx.conf
@@ -10,7 +10,7 @@ server {
     try_files $uri $uri/ /index.html;
   }
 
-  # 👇 Archivos estáticos de Django/DRF
+  # 👇 Archivos estáticos de Django/DRF (incluye admin CSS/JS)
   location /static/ {
     alias /app/staticfiles/;
   }
@@ -24,8 +24,8 @@ server {
     proxy_set_header X-Forwarded-Proto $scheme;
   }
 
-  # 👇 Proxy hacia el backend Django/Gunicorn (Admin)
-  location /admin/ {
+  # 👇 Proxy hacia el backend Django/Gunicorn (Admin pages)
+  location /admin {
     proxy_pass http://backend:8000;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
