--- a/frontend/medops/nginx.conf
+++ b/frontend/medops/nginx.conf
@@ -5,17 +5,17 @@ server {
   root /usr/share/nginx/html;
   index index.html;
 
-  # 👇 Frontend SPA (React/Vite build) con fallback
+  # 👇 Frontend SPA
   location / {
     try_files $uri $uri/ /index.html;
   }
 
-  # 👇 Archivos estáticos de Django/DRF (incluye admin CSS/JS)
+  # 👇 Archivos estáticos (incluye admin CSS/JS)
   location /static/ {
     alias /app/staticfiles/;
   }
 
-  # 👇 Proxy hacia el backend Django/Gunicorn (API)
+  # 👇 Proxy hacia backend (API)
   location /api/ {
     proxy_pass http://backend:8000;
     proxy_set_header Host $host;
@@ -24,8 +24,8 @@ server {
     proxy_set_header X-Forwarded-Proto $scheme;
   }
 
-  # 👇 Proxy hacia el backend Django/Gunicorn (Admin pages)
-  location /admin {
+  # 👇 Proxy hacia backend (Admin pages)
+  location ^~ /admin {
     proxy_pass http://backend:8000;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
@@ -33,7 +33,7 @@ server {
     proxy_set_header X-Forwarded-Proto $scheme;
   }
 
-  # 👇 Opciones de rendimiento (gzip y cache)
+  # 👇 Rendimiento
   gzip on;
   gzip_types text/plain text/css application/javascript application/json image/svg+xml;
   gzip_min_length 256;
