--- a/frontend/medops/nginx.conf
+++ b/frontend/medops/nginx.conf
@@ -5,17 +5,17 @@ server {
   root /usr/share/nginx/html;
   index index.html;
 
-  # 👇 Frontend SPA
+  # 👇 Frontend SPA (React/Vite build) con fallback
   location / {
     try_files $uri $uri/ /index.html;
   }
 
   # 👇 Archivos estáticos (incluye admin CSS/JS)
   location /static/ {
-    alias /app/staticfiles/;
+    root /app;
   }
 
-  # 👇 Proxy hacia backend (API)
+  # 👇 Proxy hacia backend Django/Gunicorn (API)
   location /api/ {
     proxy_pass http://backend:8000;
     proxy_set_header Host $host;
@@ -24,7 +24,7 @@ server {
     proxy_set_header X-Forwarded-Proto $scheme;
   }
 
-  # 👇 Proxy hacia backend (Admin pages)
+  # 👇 Proxy hacia backend Django/Gunicorn (Admin pages)
   location ^~ /admin {
     proxy_pass http://backend:8000;
     proxy_set_header Host $host;
@@ -33,7 +33,7 @@ server {
     proxy_set_header X-Forwarded-Proto $scheme;
   }
 
-  # 👇 Rendimiento
+  # 👇 Opciones de rendimiento (gzip y cache)
   gzip on;
   gzip_types text/plain text/css application/javascript application/json image/svg+xml;
   gzip_min_length 256;
