--- a/frontend/medops/nginx.conf
+++ b/frontend/medops/nginx.conf
@@ -12,7 +12,7 @@ server {
 
   # 👇 Archivos estáticos (incluye admin CSS/JS)
   location /static/ {
-    root /app;
+    alias /app/staticfiles/;
   }
 
   # 👇 Proxy hacia backend Django/Gunicorn (API)
