--- a/frontend/medops/nginx.conf
+++ b/frontend/medops/nginx.conf
@@ -5,20 +5,29 @@ server {
   root /usr/share/nginx/html;
   index index.html;
 
-  # 👇 Frontend SPA (React/Vite build) con fallback
+  # Frontend SPA
   location / {
     try_files $uri $uri/ /index.html;
   }
 
-  # 👇 Archivos estáticos (incluye admin CSS/JS)
+  # Archivos estáticos
   location /static/ {
     alias /app/staticfiles/;
     expires 30d;
-    access_log off;
     add_header Cache-Control "public";
   }
 
-  # 👇 Proxy hacia backend Django/Gunicorn (API)
+  # 👇 SOLUCIÓN: Servir archivos de Media directamente desde Nginx
+  location /media/ {
+    alias /app/media/;  # Esta ruta debe coincidir con el volumen en docker-compose
+    expires 7d;
+    access_log off;
+    add_header Cache-Control "public";
+    # Opcional: permitir acceso CORS si el frontend lo pide específicamente
+    add_header 'Access-Control-Allow-Origin' '*';
+  }
+
+  # Proxy hacia backend Django (API)
   location /api/ {
     proxy_pass http://backend:8000;
     proxy_set_header Host $host;
@@ -27,7 +36,7 @@ server {
     proxy_set_header X-Forwarded-Proto $scheme;
   }
 
-  # 👇 Proxy hacia backend Django/Gunicorn (Admin pages)
+  # Proxy hacia backend Django (Admin)
   location ^~ /admin {
     proxy_pass http://backend:8000;
     proxy_set_header Host $host;
@@ -36,7 +45,6 @@ server {
     proxy_set_header X-Forwarded-Proto $scheme;
   }
 
-  # 👇 Opciones de rendimiento (gzip y cache)
   gzip on;
   gzip_types text/plain text/css application/javascript application/json image/svg+xml;
   gzip_min_length 256;
