--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,11 +19,11 @@ services:
     volumes:
       # Monta el resultado del build en Nginx
       - ./frontend/medops/dist:/usr/share/nginx/html
-      # Monta el archivo de configuración corregido de Nginx
+      # Monta el archivo de configuración de Nginx (debe estar en la raíz)
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       # Comparte estáticos con backend
       - ./staticfiles:/app/staticfiles
-      # 👇 SHARED MEDIA VOLUME: Permite a Nginx servir las imágenes
+      # 👇 SHARED MEDIA VOLUME: Nginx lee desde /app/media
       - ./media:/app/media:ro
 
   backend:
@@ -54,11 +54,12 @@ services:
     networks:
       - medops_net
     volumes:
-      - .:/srv/medops
+      # 👇 CORRECCIÓN: Ahora coincide con el WORKDIR /app del Dockerfile
+      - .:/app
       - ./staticfiles:/app/staticfiles
-      # 👇 SHARED MEDIA VOLUME: Donde Django guarda las imágenes reales
-      - ./media:/srv/medops/media
-      - ./data:/srv/medops/data
+      # 👇 CORRECCIÓN: Django escribe en /app/media, que ahora es persistente en tu host
+      - ./media:/app/media
+      - ./data:/app/data
 
   db:
     image: postgres:15
