--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 version: "3.9"
-
 services:
+  # ================================
+  # FRONTEND SERVICE
+  # ================================
   frontend:
     build:
       context: ./frontend/medops
@@ -10,10 +12,21 @@ services:
     env_file:
       - .env.production
     environment:
-      - VITE_API_URL=http://localhost:8000/api/
+      # ✅ CORREGIDO: Usar nombre del servicio en lugar de localhost
+      - VITE_API_URL=http://backend:8000/api/
       - VITE_DEV_TOKEN=${VITE_DEV_TOKEN}
+      # ✅ AGREGADO: Variables de producción
+      - NODE_ENV=production
+      - VITE_MEDOPS_ENV=production
     depends_on:
       - backend
+      # ✅ AGREGADO: Health check para monitoreo
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8080"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
     networks:
       - medops_net
     volumes:
@@ -21,7 +34,9 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ./staticfiles:/app/staticfiles
       - ./media:/app/media:ro
-
+  # ================================
+  # BACKEND SERVICE
+  # ================================
   backend:
     build: .
     command: gunicorn --bind 0.0.0.0:8000 medops.wsgi:application
@@ -31,7 +46,10 @@ services:
       - .env.production
     environment:
       - DJANGO_SECRET_KEY=${DJANGO_SECRET_KEY}
-      - DEBUG=${DEBUG}
+      # ✅ CAMBIADO: DEBUG=False para producción
+      - DEBUG=False
+      # ✅ AGREGADO: Configuración de producción
+      - DJANGO_SETTINGS_MODULE=core.settings_production
       - ALLOWED_HOSTS=${ALLOWED_HOSTS}
       - DB_NAME=${DB_NAME}
       - DB_USER=${DB_USER}
@@ -39,7 +57,11 @@ services:
       - DB_HOST=db
       - DB_PORT=5432
       - DJANGO_LOG_FILE=${DJANGO_LOG_FILE}
-      - CORS_ALLOWED_ORIGINS=http://localhost:8080,http://127.0.0.1:8080
+      # ✅ MEJORADO: CORS más específico y seguro
+      - CORS_ALLOWED_ORIGINS=http://localhost:8080,http://127.0.0.1:8080,https://medops.com,https://www.medops.com
+      - CORS_ALLOW_CREDENTIALS=true
+      - CORS_ALLOWED_METHODS=GET,POST,PUT,DELETE,OPTIONS
+      - CORS_ALLOWED_HEADERS=Content-Type,Authorization,X-Institution-ID,X-Requested-With
     depends_on:
       db:
         condition: service_started
@@ -54,7 +76,17 @@ services:
       - ./staticfiles:/app/staticfiles
       - ./media:/app/media
       - ./data:/app/data
-
+    # ✅ AGREGADO: Health check robusto
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/api/health/"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+    restart: unless-stopped
+  # ================================
+  # DATABASE SERVICE
+  # ================================
   db:
     image: postgres:15
     restart: always
@@ -64,12 +96,19 @@ services:
       POSTGRES_DB: ${DB_NAME}
     ports:
       - "5432:5432"
+    # ✅ MEJORADO: Persistencia de datos robusta
     volumes:
-      # CAMBIO CLAVE: Ahora los datos viven en la carpeta física 'postgres_data'
-      - ./postgres_data:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/data
     networks:
       - medops_net
-
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${DB_USER} -d ${DB_NAME}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+  # ================================
+  # ICD APIS
+  # ================================
   icdapi_es:
     image: whoicd/icd-api
     container_name: icdapi_es
@@ -87,7 +126,6 @@ services:
       timeout: 10s
       retries: 10
       start_period: 30s
-
   icdapi_en:
     image: whoicd/icd-api
     container_name: icdapi_en
@@ -105,9 +143,9 @@ services:
       timeout: 10s
       retries: 10
       start_period: 30s
-
-# El bloque de volumes se ha eliminado ya que usamos rutas relativas (./)
-
+# ================================
+# NETWORK CONFIGURATION
+# ================================
 networks:
   medops_net:
     driver: bridge
