--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -75,8 +75,7 @@ services:
       - .:/app
       - ./staticfiles:/app/staticfiles
       - ./media:/app/media
-      - ./data:/app/data
-    # ✅ AGREGADO: Health check robusto
+      # ✅ AGREGADO: Health check robusto
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/api/health/"]
       interval: 30s
@@ -98,6 +97,7 @@ services:
       - "5432:5432"
     # ✅ MEJORADO: Persistencia de datos robusta
     volumes:
+      # Usar volumen nombrado para persistencia correcta
       - postgres_data:/var/lib/postgresql/data
     networks:
       - medops_net
