--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 version: "3.9"
+
 services:
   # ================================
   # FRONTEND SERVICE
@@ -12,15 +13,12 @@ services:
     env_file:
       - .env.production
     environment:
-      # ✅ CORREGIDO: Usar nombre del servicio en lugar de localhost
       - VITE_API_URL=http://backend:8000/api/
       - VITE_DEV_TOKEN=${VITE_DEV_TOKEN}
-      # ✅ AGREGADO: Variables de producción
       - NODE_ENV=production
       - VITE_MEDOPS_ENV=production
     depends_on:
       - backend
-      # ✅ AGREGADO: Health check para monitoreo
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8080"]
       interval: 30s
@@ -34,6 +32,7 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ./staticfiles:/app/staticfiles
       - ./media:/app/media:ro
+
   # ================================
   # BACKEND SERVICE
   # ================================
@@ -46,9 +45,7 @@ services:
       - .env.production
     environment:
       - DJANGO_SECRET_KEY=${DJANGO_SECRET_KEY}
-      # ✅ CAMBIADO: DEBUG=False para producción
       - DEBUG=False
-      # ✅ AGREGADO: Configuración de producción
       - DJANGO_SETTINGS_MODULE=core.settings_production
       - ALLOWED_HOSTS=${ALLOWED_HOSTS}
       - DB_NAME=${DB_NAME}
@@ -57,7 +54,6 @@ services:
       - DB_HOST=db
       - DB_PORT=5432
       - DJANGO_LOG_FILE=${DJANGO_LOG_FILE}
-      # ✅ MEJORADO: CORS más específico y seguro
       - CORS_ALLOWED_ORIGINS=http://localhost:8080,http://127.0.0.1:8080,https://medops.com,https://www.medops.com
       - CORS_ALLOW_CREDENTIALS=true
       - CORS_ALLOWED_METHODS=GET,POST,PUT,DELETE,OPTIONS
@@ -75,7 +71,6 @@ services:
       - .:/app
       - ./staticfiles:/app/staticfiles
       - ./media:/app/media
-      # ✅ AGREGADO: Health check robusto
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/api/health/"]
       interval: 30s
@@ -83,6 +78,7 @@ services:
       retries: 3
       start_period: 40s
     restart: unless-stopped
+
   # ================================
   # DATABASE SERVICE
   # ================================
@@ -95,9 +91,7 @@ services:
       POSTGRES_DB: ${DB_NAME}
     ports:
       - "5432:5432"
-    # ✅ MEJORADO: Persistencia de datos robusta
     volumes:
-      # Usar volumen nombrado para persistencia correcta
       - postgres_data:/var/lib/postgresql/data
     networks:
       - medops_net
@@ -106,6 +100,7 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+
   # ================================
   # ICD APIS
   # ================================
@@ -126,6 +121,7 @@ services:
       timeout: 10s
       retries: 10
       start_period: 30s
+
   icdapi_en:
     image: whoicd/icd-api
     container_name: icdapi_en
@@ -143,9 +139,16 @@ services:
       timeout: 10s
       retries: 10
       start_period: 30s
+
 # ================================
 # NETWORK CONFIGURATION
 # ================================
 networks:
   medops_net:
     driver: bridge
+
+# ================================
+# VOLUMES CONFIGURATION
+# ================================
+volumes:
+  postgres_data:
