--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,14 +39,15 @@ services:
     environment:
       - DJANGO_SECRET_KEY=${DJANGO_SECRET_KEY}
       - DEBUG=${DEBUG}
-      - ALLOWED_HOSTS=${ALLOWED_HOSTS}
+      - ALLOWED_HOSTS=*
       - DB_NAME=${DB_NAME}
       - DB_USER=${DB_USER}
       - DB_PASSWORD=${DB_PASSWORD}
       - DB_HOST=db
       - DB_PORT=5432
       - DJANGO_LOG_FILE=${DJANGO_LOG_FILE}
-      - CORS_ALLOWED_ORIGINS=http://localhost:8080,http://127.0.0.1:8080
+      - CORS_ALLOWED_ORIGINS=http://localhost:8080,http://127.0.0.1:8080,http://localhost:8000
+      - CORS_ALLOW_CREDENTIALS=True
     depends_on:
       - db
     networks:
