--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     env_file:
       - .env.production
     environment:
-      - VITE_API_URL=http://localhost:8000/api
+      - VITE_API_URL=http://172.25.222.123:8000/api
       - VITE_DEV_TOKEN=${VITE_DEV_TOKEN}
       - NODE_ENV=production
       - VITE_MEDOPS_ENV=production
@@ -39,14 +39,14 @@ services:
     environment:
       - DJANGO_SECRET_KEY=${DJANGO_SECRET_KEY}
       - DEBUG=${DEBUG}
-      - ALLOWED_HOSTS=*
+      - ALLOWED_HOSTS=172.25.222.123,localhost,127.0.0.1,*
       - DB_NAME=${DB_NAME}
       - DB_USER=${DB_USER}
       - DB_PASSWORD=${DB_PASSWORD}
       - DB_HOST=db
       - DB_PORT=5432
       - DJANGO_LOG_FILE=${DJANGO_LOG_FILE}
-      - CORS_ALLOWED_ORIGINS=http://localhost:8080,http://127.0.0.1:8080,http://localhost:8000
+      - CORS_ALLOWED_ORIGINS=http://localhost:8080,http://127.0.0.1:8080,http://172.25.222.123:8080,http://172.25.222.123:8000
       - CORS_ALLOW_CREDENTIALS=True
     depends_on:
       - db
